Finally got a local Ruby env up!

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,7 +1,7 @@
 ---
-title: "Page not found"
+title: "No pages here friend"
 layout: single
-excerpt: "Page not found, but wow look at this 404."
+excerpt: "But hey, I remembered to throw in a 404."
 sitemap: false
 permalink: /404.html
 ---
