Finally got a Ruby setup on my laptop

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,12 +1,12 @@
 ---
 title: "No pages here friend"
 layout: single
-excerpt: "But hey, I remembered to throw in a 404."
+excerpt: "404"
 sitemap: false
 permalink: /404.html
 ---
 
-What a professional move.
+But hey, I remembered to throw in a 404.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
