--- a/_posts/2018-05-23-first.md
+++ b/_posts/2018-05-23-first.md
@@ -1,9 +1,9 @@
 ---
 title: "Some Kind of First Post"
 date: 2018-05-23
-tags: [posts, blogs]
-# header:
-#  image: ""
+tags: [posts]
+header:
+ image: "/images/DashboardTop.jpg"
 excerpt: "Posts are a good thing to write"
 ---
 
