--- a/_posts/2018-05-23-first.md
+++ b/_posts/2018-05-23-first.md
@@ -7,8 +7,6 @@ header:
 excerpt: "Posts are a good thing to write"
 ---
 
-# Sup
+# Some title
 
-Apparently, all the cool kids have blogs. As an guy with and undergrad systems degree, a job as a DBA, and some textbooks on TensorFlow, I figure it's probably in my best interest to make one too. Hopefully down the road I will start doing more intersting data science projects, right now it's mostly an excuse to set up a Ruby environment and try out some DNS.
-
-So let's write some *posts*.
+Here is where I would say some interesting.
